force-app/main/default/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <defaultValue>&apos;Reason1&apos;</defaultValue>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reason1</fullName>
                </value>
                <value>
                    <fullName>Reason2</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>VRTask</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Task-{000}</displayFormat>
        <label>Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ValidnRuleTasks</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Address_Rule</fullName>
        <active>true</active>
        <description>Street City and  Country should either be blank or all filled up.</description>
        <errorConditionFormula>and(len(Street__c)=0, len(City__c)=0,len(Country__c)&gt;0) ||
and(len(Street__c)=0, len(City__c)&gt;0,len(Country__c)=0) ||
and(len(Street__c)=0, len(City__c)&gt;0,len(Country__c)&gt;0) ||
and(len(Street__c)&gt;0, len(City__c)=0,len(Country__c)=0) ||
and(len(Street__c)&gt;0, len(City__c)=0,len(Country__c)&gt;0) ||
and(len(Street__c)&gt;0, len(City__c)&gt;0,len(Country__c)=0)</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Enter Complete address or leave it completely blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>len(Bank_Account_Number__c ) &gt;0  &amp;&amp; LEN(Bank_Account_Number__c )  &lt;&gt; 15</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Enter Proper Account Number--Account Number has to be 15 Digits exactly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>not(begins(Phone_Number__c, &quot;+&quot;))</errorConditionFormula>
        <errorDisplayField>Phone_Number__c</errorDisplayField>
        <errorMessage>Please enter the Country Code and &apos;+&apos; sign before the Country Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_edit_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Price__c )</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Sorry!!! You cannot Edit the Price. Please contact your Manager for Permission</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Other_Rule</fullName>
        <active>true</active>
        <description>If &apos;Other&apos;  is selected for Reason then the Other Text Box should not left empty or null</description>
        <errorConditionFormula>ISPICKVAL( Reason__c ,&apos;Other&apos;) &amp;&amp;   ISBLANK (Other_Reason__c)</errorConditionFormula>
        <errorDisplayField>Other_Reason__c</errorDisplayField>
        <errorMessage>Since you selected Other for Reason please mention the reason, you cannot leave it blank.</errorMessage>
    </validationRules>
</CustomObject>